[package]
name = "processor_inbound"
version = "0.0.1"
edition = "2024"

[dependencies]
clap =  { version = "4.5", features = ["derive"] } #https://docs.rs/clap/latest/clap/trait.Subcommand.html
tokio = { version = "1.45", features = ["full"] } #https://tokio.rs/
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1" #https://docs.rs/tracing/latest/tracing/
anyhow = "1.0" #https://docs.rs/anyhow/latest/anyhow/
rayon = "1.10.0" #https://docs.rs/rayon/latest/rayon/
serde = { version = "1.0.219", features = ["derive"] } #https://serde.rs/
serde_json = "1.0.140" #https://docs.rs/serde_json/latest/serde_json/
async-trait = "0.1.88" #https://docs.rs/async-trait/latest/async_trait/
thiserror = "2.0.12" #https://docs.rs/thiserror/latest/thiserror/
chrono = { version = "0.4.41", features = ["serde"] } #https://docs.rs/chrono/latest/chrono/
flate2 = "1.1.1" #https://docs.rs/flate2/latest/flate2/
csv = "1.3.1" #https://docs.rs/csv/latest/csv/
futures = "0.3.31" #https://docs.rs/futures/latest/futures/
tokio-stream = "0.1.17" #https://docs.rs/tokio-stream/latest/tokio_stream/
strum_macros = "0.27.1"
#jsonschema = "0.17"
